# js-to-c

./: .dockerignore  .editorconfig  .gitignore  .lvimrc  LICENSE  Makefile  NOTES.md  README.md  TODO.md  compile-and-run  compile-js  compile-js-lib  compile-js-to-c  compile-js.js  compile-run-c  exploding-deref.bc  index.html  lib.sh  link-c  package-lock.json  package.json  server.Dockerfile  testing-file.md  todos.md  tsconfig.json
.github/: main.workflow
c-notes/: array-index-arithmetic.c  compile-run  dynlib.c  exploding-deref.s  narrative.md  pointers-in-unions.c  run  string-literals.c  string-precision.c
clib/: object.c
notes/: factorial-wip.c  first-working-factorial-formatted.c  first-working-factorial.c  simple-object-properties.c
runtime/: .gitignore  .skeleton.test.c  CMakeLists.txt  Makefile  NOTES.md  README.md  _freelist.c  _freelist.h  _freelist.test.c  _memory.h  array.c  array.h  array.test.c  clangopts.cfg  cmake_install.cmake  color.h  conditions.h  config.c  config.h  config.test.c  environments.c  environments.h  environments.test  environments.test.c  environments_test  event.c  event.h  exceptions.c  exceptions.h  exceptions.test.c  functions.c  functions.h  functions.test.c  gc.c  gc.h  gc.test.c  gcObject.h  global.c  global.h  global.test.c  (+28 more)
runtime/c-notes/: bad_idea  bool.c  exploding-deref.ll  my-bad-pointer-idea.c
runtime/lib/: debug.h  uthash.h
runtime/prelude.h.dSYM/Contents/: Info.plist
runtime/prelude.h.dSYM/Contents/Resources/DWARF/: prelude.h
runtime/scripts/: c-to-exec  c-to-lib  compile-dylib  compile-test-loop
(+66 files in other folders)
